tests/cases/patterns/ok/pattern-value-ownership-vector-rest-skip.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn consume(value: own i64, amount: i64) -> i64 {
  drop value;
  return amount;
}

fn main() -> i64 {
  let [first, .., last]: Vec[own i64] = [make_owned(1), make_owned(2), make_owned(3)];
  return consume(first, 5) + consume(last, 7);
}
