tests/cases/patterns/errors/pattern-ref-temporary.ari
fn main() -> i64 {
  let ref borrowed = 1 + 2;
  return 0;
}
